# Terradventure

./: .gitignore  Cargo.toml  README.md
assets/dialogs/: Alchemist.json  Blacksmith.json
assets/lang/: en.json  fr.json
assets/loot_tables/chest/: coffre_grotte.json  ile_flottante.json
assets/loot_tables/mobs/: pig.json  rabbit.json  sheep.json
assets/shop/: potions.json
assets/tiled/: Test.tsx  forest.tsx  test.tmx
assets/tiled/biome/: plains.tmx
src/: animation.rs  assets.rs  background.rs  camera.rs  chest.rs  commands.rs  effects.rs  entite.rs  entity.rs  interactable.rs  inventory.rs  lang.rs  loot_table.rs  main.rs  misc.rs  mob.rs  music.rs  ore.rs  player.rs  plugin.rs  random.rs  save.rs  settings.rs  state.rs  stats.rs  tiled.rs  world.rs
src/gui/: hud.rs  main_menu.rs  misc.rs  mod.rs  pause.rs  settings.rs  slider.rs  styles.rs
src/gui/buttons/: scroll.rs
src/gui/main_menu/: load_world.rs  mod.rs  new_world.rs
src/gui/settings/: audio.rs  fov.rs  keybinds.rs  lang.rs  mod.rs  range.rs  ui.rs
src/items/: item.rs  loot_table.rs  mod.rs  stack.rs  tool.rs
src/items/list/: levitation_potion.rs  mana_potion.rs  mod.rs  porkchop.rs  processed_ore.rs  sword.rs  unprocessed_ore.rs  wool.rs
src/main_menu/: mod.rs
src/mob/: mod.rs
src/mob/list/: mod.rs  pig.rs  rabbit.rs  sheep.rs
src/npc/: dialog.rs  mod.rs
src/npc/shop/: mod.rs  ui.rs
src/player/: inventory.rs  mana.rs  mod.rs  model.rs  money.rs
src/player/class/: archer.rs  enchantress.rs  knight.rs  mod.rs  musketeer.rs  swordsman.rs  wizard.rs
src/player/inventory/: mod.rs  ui.rs
src/save/: mod.rs
tiled_collider_gen/: Cargo.toml
tiled_collider_gen/src/: main.rs
