[package]
name = "terradventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["serialize"] }
rand = "0.8.5"
bevy_rapier2d = { version = "0.23.0", features = ["parallel", "simd-stable"] }
serde = "1.0.195"
once_cell = "1.19.0"
bevy_ecs_tilemap = { version = "0.12" }
thiserror = "1.0.56"
tiled = "0.11.2"
bevy_rapier_collider_gen = "0.3.1"
dirs = "5.0.1"
image = "0.24.8"
bevy_kira_audio = "0.18.0"
serde_json = "1.0.113"
enum_dispatch = "0.3.12"
chrono = { version = "0.4.34", features = ["serde"] }
bevy_simple_text_input = "0.3.1"
strum_macros = "0.26.1"
strum = "0.26.1"
bincode = "1.3.3"
bitflags = "2.4.2"
bevy-parallax = "0.7.0"

[build-dependencies]
winres = "0.1"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 2
