[package]
name = "terradventure"
edition = "2021"
version = "0.1.0"

[dependencies]
bevy_kira_audio = "0.18.0"
bevy_rapier_collider_gen = "0.3.1"
bevy_simple_text_input = "0.3.1"
bincode = "1.3.3"
bitflags = "2.4.2"
dirs = "5.0.1"
enum_dispatch = "0.3.12"
image = "0.24.8"
once_cell = "1.19.0"
rand = "0.8.5"
serde = "1.0.195"
serde_json = "1.0.113"
strum = "0.26.1"
strum_macros = "0.26.1"
thiserror = "1.0.56"
tiled = "0.11.2"

[dependencies.bevy]
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "hdr",
    "ktx2",
    "multi-threaded",
    "png",
    "tonemapping_luts",
    "vorbis",
    "x11",
    "zstd",
    "serialize",
]
version = "0.12.1"
default-features = false

[dependencies.bevy_ecs_tilemap]
version = "0.12"
features = []

[dependencies.bevy_rapier2d]
version = "0.23.0"
features = ["parallel", "simd-stable"]

[dependencies.chrono]
version = "0.4.34"
features = ["serde"]

[build-dependencies]
winres = "0.1"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3
